Enable support for additionalProperties schemas

--- a/packages/antd/src/index.less
+++ b/packages/antd/src/index.less
@@ -13,6 +13,11 @@
   margin-bottom: @form-item-margin-bottom;
 }
 
+.object-property-expand {
+  // Add margin below the `additionalProperties` related add button.
+  margin-bottom: @form-item-margin-bottom;
+}
+
 // .panel.panel-default.panel-body > .ant-row > fieldset > .ant-col.ant-form-item-label {
 .panel.panel-default.panel-body fieldset > .ant-col.ant-form-item-label {
   // Hide oneOf / anyOf  object title.
